--- a/style.css
+++ b/style.css
@@ -1,8 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    font-family: "Fira Sans", serif;
+body {
+  font-family: "Fira Sans", serif;
+}
+nav, header, main{
+    margin: 0 160px;
+    background-color: rgb(245,245,245);
+}
+/* nav-bar */
+nav h1 {
+  color: rgb(14, 14, 14);
+  font-size: 32px;
+  font-weight: 700;
+}
+.sign-in-btn {
+  color: rgb(0, 106, 80);
+  font-size: 18px;
+  font-weight: 600;
+  padding: 15px 30px 15px 30px;
+  border: 1px solid rgb(0, 106, 80);
+  border-radius: 8px;
+  cursor: pointer;
+}
+.sign-in-btn:hover{
+    background-color: rgb(198, 228, 214);
+}
+.sign-in-btn:active{
+    background-color: rgba(198, 228, 214, 0.653);
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 31px;
 }
