--- a/style.css
+++ b/style.css
@@ -83,3 +83,34 @@ header {
   align-items: center;
 }
 
+/* piller section */
+.pillar {
+  margin: 80px 0;
+}
+.pillar h1 {
+  color: rgb(14, 14, 14);
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.pillar-card-container{
+  display: flex;
+  gap: 24px;
+}
+.pillar-card {
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  background: rgb(255, 255, 255);
+  padding: 24px;
+}
+.pillar-card h2 {
+  color: rgba(14, 14, 14, 0.8);
+  font-size: 20px;
+  font-weight: 700;
+  margin: 25px 0 12px 0;
+}
+.pillar-card p {
+  color: rgba(14, 14, 14, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+}
