--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header h1 {
   background-color: rgba(0, 106, 80, 0.766);
 }
 .header-btn:active {
-  background-color: rgba(0, 106, 80, 0.59);
+  background-color: rgb(0, 106, 80);
 }
 header {
   padding: 80px 100px;
@@ -114,4 +114,70 @@ header {
   font-size: 16px;
   font-weight: 400;
 }
-
+.vision {
+  margin: 80px 0;
+}
+.vision h1 {
+  color: rgb(14, 14, 14);
+  font-size: 40px;
+  font-weight: 700;
+}
+.vision p {
+  color: rgba(14, 14, 14, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  margin: 24px 0 30px 0;
+}
+.vision-card-container {
+  display: flex;
+  gap: 24px;
+}
+.vision-card {
+  padding: 32px;
+  border-radius: 16px;
+}
+#vision-card-1 {
+  background-color: rgba(84, 144, 245, 0.2);
+}
+#vision-card-2 {
+  background-color: rgb(198, 228, 214);
+}
+#vision-card-3 {
+  background-color: rgb(247, 235, 207);
+}
+.learn-more-btn{
+  border-radius: 8px;
+  padding: 11px 20px 11px 20px;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+#learn-more-btn-1{
+  background-color: rgb(84, 144, 245);
+}
+#learn-more-btn-1:hover{
+  background-color: rgba(84, 143, 245, 0.692);
+}
+#learn-more-btn-1:active{
+  background-color: rgb(84, 144, 245);
+}
+#learn-more-btn-2{
+  background-color: rgb(9, 161, 92);
+}
+#learn-more-btn-2:hover{
+  background-color: rgba(9, 161, 93, 0.605);
+}
+#learn-more-btn-2:active{
+  background-color: rgb(9, 161, 92);
+}
+#learn-more-btn-3{
+  background-color: rgb(255, 194, 57);
+}
+#learn-more-btn-3:hover{
+  background-color: rgba(255, 196, 57, 0.622);
+}
+#learn-more-btn-3:active{
+  background-color: rgb(255, 196, 57);
+}
