--- a/style.css
+++ b/style.css
@@ -211,6 +211,9 @@ header {
   font-weight: 400;
   margin-top: 4px;
 }
+.option {
+  padding: 32px;
+}
 .option > h1 {
   color: rgb(14, 14, 14);
   font-size: 40px;
@@ -234,12 +237,30 @@ header {
   font-size: 20px;
   font-weight: 600;
 }
-.question-box-container{
+.question-box-container {
   display: flex;
   flex-direction: column;
+  border: 1px solid rgba(14, 14, 14, 0.15);
 }
-.question-box{
+.question-box {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 24px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+}
+.question-label {
+  color: rgb(14, 14, 14);
+  font-size: 16px;
+  font-weight: 600;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.select-menu {
+  border: 1px solid rgb(14, 14, 14);
+  border-radius: 4px;
+  background-color: rgba(9, 161, 92, 0.15);
+  color: rgb(14, 14, 14);
+  font-size: 16px;
+  font-weight: 600;
+  padding: 10px 14px 10px 14px;
 }
