--- a/style.css
+++ b/style.css
@@ -386,10 +386,64 @@ header {
   font-weight: 600;
   padding: 17px 34px 17px 34px;
   border: none;
+  cursor: pointer;
 }
 .done-now-btn:hover {
   background-color: rgba(0, 106, 80, 0.814);
 }
 .done-now-btn:active {
+  background-color: rgb(0, 106, 80);
+}
+.subscribe {
+  text-align: center;
+  border-radius: 24px;
+  background-color: rgb(198, 228, 214);
+  padding: 80px 100px 80px 100px;
+  margin: 80px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.subscribe h1 {
+  color: rgb(14, 14, 14);
+  font-size: 40px;
+  font-weight: 700;
+}
+.subscribe p {
+  color: rgba(14, 14, 14, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  width: 622px;
+  height: 48px;
+}
+.email-container {
+  display: flex;
+}
+#email {
+  border-radius: 8px 0px 0px 8px;
+  background-color: rgb(255, 255, 255);
+  padding: 18px 40px 18px 40px;
+  color: rgba(14, 14, 14, 0.3);
+  font-size: 16px;
+  font-weight: 400;
+  border: none;
+  width: 600px;
+}
+.subscribe-btn {
+  border-radius: 0px 8px 8px 0px;
+  background-color: rgb(0, 106, 80);
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-weight: 600;
+  border: none;
+  padding: 17px 34px 17px 34px;
+  cursor: pointer;
+}
+.subscribe-btn:hover {
+  background-color: rgba(0, 106, 80, 0.639);
+}
+.subscribe-btn:active {
   background-color: rgb(0, 106, 80);
 }
