--- a/style.css
+++ b/style.css
@@ -447,3 +447,27 @@ header {
 .subscribe-btn:active {
   background-color: rgb(0, 106, 80);
 }
+footer {
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+}
+.footer-content {
+  padding: 50px;
+  margin: 0 160px;
+}
+.footer-content h1 {
+  color: rgb(14, 14, 14);
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+hr{
+  border: 1px solid rgba(14, 14, 14, 0.1);
+}
+.logo{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
